tests/paczka1/small_fuzzy/37796066.err
Error in line 2: A726 A686 6,8
Error in line 1: tOmK A69 70,8
